initial backend for collections
